# axum

api-postgres/: .env  Cargo.toml
api-postgres/src/: config.rs  database.rs  lib.rs  main.rs  utils.rs
api-postgres/src/handlers/: health_handlers.rs  location_handlers.rs
api-postgres/src/models/: location_model.rs
api-postgres/src/schemas/: location_schemas.rs
api-postgres/src/v1/: routes.rs
api-postgres/src/v1/routes/: health_routes.rs  location_routes.rs  mod.rs
